# ForMe_AI_recognition

./: README.md  main.py  pyproject.toml
src/: climate.py  funcs.py  game.py  word.py
